objects/STObj2__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>STObj2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>field1__c</columns>
        <columns>field2__c</columns>
        <columns>field3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>